--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="playhydra, unblocked games, unblocked, unblocked playhydra"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME | PLAYHYDRA</title>
+    <title>HOME | WIRE</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -24,16 +24,13 @@
         text-align: center;
       "
     >
-      <a href="/posts/2022/it-happened.html" style="color: #161515;"
-        >PLAYHYDRA has been blocked for the first time!</a
-      >
     </p>
     <div class="nav-container">
       <a href="index.html"
         ><img
           src="assets/images/playhydra.png"
-          alt="PLAYHYDRA LOGO"
-          title="PLAYHYDRA"
+          alt="WIRE LOGO"
+          title="WIRE UNBLOCKED"
           class="logo"
       /></a>
 
