--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/retrobowl.jfif"
+          src="assets/images/retrobowl.jpg"
           alt="Retrobowl"
           class="search-img"
         />
