--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="nav-container">
       <a href="index.html"
         ><img
-          src="assets/images/playhydra.png"
+          src="images/playhydra.png"
           alt="WIRE LOGO"
           title="WIRE UNBLOCKED"
           class="logo"
@@ -49,24 +49,24 @@
     />
     <div id="search-items">
       <div class="search-item">
-        <img src="assets/images/slope.jpg" alt="Slope" class="search-img" />
+        <img src="images/slope.jpg" alt="Slope" class="search-img" />
         <a href="games/slope/index.html">Slope</a>
       </div>
       <div class="search-item">
         <img
-          src="assets/images/retrobowl.jpg"
+          src="images/retrobowl.jpg"
           alt="Retrobowl"
           class="search-img"
         />
         <a href="games/retrobowl/index.html">Retrobowl</a>
       </div>
       <div class="search-item">
-        <img src="assets/images/1v1lol.jpg" alt="1v1.lol" class="search-img" />
+        <img src="images/1v1lol.jpg" alt="1v1.lol" class="search-img" />
         <a href="games/1v1lol/index.html">1v1.lol</a>
       </div>
       <div class="search-item">
         <img
-          src="assets/images/fnaf.jpg"
+          src="images/fnaf.jpg"
           alt="Five Nights at Freddy's"
           class="search-img"
         />
@@ -74,7 +74,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/fnaf 2.jpg"
+          src="images/fnaf 2.jpg"
           alt="Five Nights at Freddy's 2"
           class="search-img"
         />
@@ -82,7 +82,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/fnaf 3.jpg"
+          src="images/fnaf 3.jpg"
           alt="Five Nights at Freddy's 3"
           class="search-img"
         />
@@ -92,12 +92,12 @@
         >
       </div>
       <div class="search-item">
-        <img src="assets/images/2048.png" alt="2048" class="search-img" />
+        <img src="images/2048.png" alt="2048" class="search-img" />
         <a href="games/2048/index.html">2048</a>
       </div>
       <div class="search-item">
         <img
-          src="assets/images/tunnel rush.jpg"
+          src="images/tunnel rush.jpg"
           alt="Tunnel Rush"
           class="search-img"
         />
@@ -105,7 +105,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/worlds hardest game.jpg"
+          src="images/worlds hardest game.jpg"
           alt="World's Hardest Game"
           class="search-img"
         />
@@ -113,7 +113,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/drift hunters.jpg"
+          src="images/drift hunters.jpg"
           alt="Drift Hunters"
           class="search-img"
         />
@@ -121,19 +121,19 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/cookie clicker.jpg"
+          src="images/cookie clicker.jpg"
           alt="Cookie Clicker"
           class="search-img"
         />
         <a href="games/cookie-clicker/index.html">Cookie Clicker</a>
       </div>
       <div class="search-item">
-        <img src="assets/images/run 3.jpg" alt="Run 3" class="search-img" />
+        <img src="images/run 3.jpg" alt="Run 3" class="search-img" />
         <a href="games/run-3/index.html">Run 3</a>
       </div>
       <div class="search-item">
         <img
-          src="assets/images/fireboy watergirl.jpg"
+          src="images/fireboy watergirl.jpg"
           alt="Fireboy and Watergirl"
           class="search-img"
         />
@@ -141,7 +141,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/friday night funkin.jpg"
+          src="images/friday night funkin.jpg"
           alt="Friday Night Funkin'"
           class="search-img"
         />
@@ -149,7 +149,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/madalin stunt cars.jpg"
+          src="images/madalin stunt cars.jpg"
           alt="Madalin Stunt Cars 2"
           class="search-img"
         />
@@ -158,7 +158,7 @@
       <!-- this game is broken and there's currently not a good way to fix it, but it's not worth removing yet -->
       <!-- <div class="search-item">
         <img
-          src="assets/images/madalin stunt cars multiplayer.jpg"
+          src="images/madalin stunt cars multiplayer.jpg"
           alt="Madalin Stunt Cars Multiplayer"
           class="search-img"
         />
@@ -167,12 +167,12 @@
         >
       </div> -->
       <div class="search-item">
-        <img src="assets/images/tetris.jpg" alt="Tetris" class="search-img" />
+        <img src="images/tetris.jpg" alt="Tetris" class="search-img" />
         <a href="games/tetris/index.html">Tetris</a>
       </div>
       <div class="search-item">
         <img
-          src="assets/images/modern blocky paint.jpg"
+          src="images/modern blocky paint.jpg"
           alt="Modern Blocky Paint"
           class="search-img"
         />
@@ -180,7 +180,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/idle breakout.jpg"
+          src="images/idle breakout.jpg"
           alt="Idle Breakout"
           class="search-img"
         />
@@ -188,7 +188,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/dino game.jpg"
+          src="images/dino game.jpg"
           alt="Chrome Dino Game"
           class="search-img"
         />
@@ -196,7 +196,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/tanuki sunset.jpg"
+          src="images/tanuki sunset.jpg"
           alt="Tanuki Sunset"
           class="search-img"
         />
@@ -207,7 +207,7 @@
       </div>
       <div class="search-item">
         <img
-          src="assets/images/bloons td 4.jpg"
+          src="images/bloons td 4.jpg"
           alt="Bloons Tower Defense 4"
           class="search-img"
         />
