--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="games/slope/index.html">Slope</a>
       </div>
       <div class="search-item">
-        <img
+        e<img
           src="images/retrobowl.jpg"
           alt="Retrobowl"
           class="search-img"
@@ -61,7 +61,9 @@
         <a href="games/retrobowl/index.html">Retrobowl</a>
       </div>
       <div class="search-item">
-        <img src="images/1v1lol.jpg" alt="1v1.lol" class="search-img" />
+        <img 
+        src="images/1v1lol.jpg" 
+        alt="1v1.lol" class="search-img" />
         <a href="games/1v1lol/index.html">1v1.lol</a>
       </div>
       <div class="search-item">
