--- a/location.html
+++ b/location.html
@@ -12,14 +12,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOCATION | WIRE</title>
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <div class="nav-container">
       <a href="index.html"
         ><img
-          src="assets/images/playhydra.png"
+          src="images/playhydra.png"
           alt="PLAYHYDRA LOGO"
           title="PLAYHYDRA"
           class="logo"
