--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="games/slope/index.html">Slope</a>
       </div>
       <div class="search-item">
-        e<img
+        <img
           src="images/retrobowl.jpg"
           alt="Retrobowl"
           class="search-img"
