--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav>
         <a href="index.html" class="nav-item">HOME</a>
         <a href="about.html" class="nav-item">ABOUT</a>
-        <a href="/location.html" class="nav-item">LOCATION</a>
+        <a href="location.html" class="nav-item">LOCATION</a>
       </nav>
     </div>
     <input
