--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img 
         src="images/1v1lol.jpg" 
         alt="1v1.lol" class="search-img" />
-        <a href="games/1v1lol/index.html">1v1.lol</a>
+        <a href="games/index.html">1v1.lol</a>
       </div>
       <div class="search-item">
         <img
