--- a/games/index.html
+++ b/games/index.html
@@ -9,14 +9,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1v1.lol | PLAYHYDRA</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../../assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <div class="nav-container">
       <a href="/"
         ><img
-          src="images/playhydra.png"
+          src="../../assets/images/playhydra.png"
           alt="PLAYHYDRA LOGO"
           title="PLAYHYDRA"
           class="logo"
