--- a/games/index.html
+++ b/games/index.html
@@ -28,17 +28,10 @@
         <a href="/location.html" class="nav-item">LOCATION</a>
       </nav>
     </div>
-    <h1>1v1.lol</h1>
-    <iframe
-      title="1v1"
-      width="1920"
-      height="1080"
-      scrolling="no"
-      frameborder="0"
-      allowtransparency="true"
-      class="igm"
-      src="https://ejvd3326248pklq0mtj313irgbc2vsrb-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s035r8h4/1v1.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=544c660bc8b16c1d&libs=core&mid=172&parent=https://sites.google.com/site/unblockedgames66ez/1v1-lol#st=e%3DAIHE3cBK9D0UGibwSQF2F64MR8cb4pzmPVFPpm9x2iU1OmvV3wfrHm9F2stu5dMRRYLHGsmiZQNreywjA%252F5m1pl9Ovr49lxTSbekq%252F58DGx8Fju5Kybmy15YlmhPX4edPMPIxnzqTss%252F%26c%3Denterprise&rpctoken=-1798097197484458310"
-    >
+    <iframe src="https://docs-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/ko1ov/to@1e8a949f89fcf2b110640c41a0705db01405d161/d7uf4.xml#" width="1920" height="1080" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" data-dashlane-frameid="1629"></iframe>
+    title="1v1"
+    scorlling="no"
+    framboarder="0"
     </iframe>
     <center>
     <sub><em>BROUGHT TO YOU BY THE STUDENTS OF WMS</em></sub>
