--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@
       content="1v1, play 1v1.lol, 1v1.lol game, unblocked, unblocked 1v1.lol, unblocked playhydra"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1v1.lol | PLAYHYDRA</title>
+    <title>1v1.lol | WIRE</title>
     <link href="../../assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
