--- a/games/index.html
+++ b/games/index.html
@@ -28,7 +28,7 @@
         <a href="/location.html" class="nav-item">LOCATION</a>
       </nav>
     </div>
-    <iframe src="aim.lol" width="1920" height="1080" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" data-dashlane-frameid="1629"></iframe>
+    <iframe src="aim.lol" width="1920" height="1080" data-dashlane-frameid="1629"></iframe>
     title="1v1"
     </iframe>
     <center>
