--- a/games/index.html
+++ b/games/index.html
@@ -28,7 +28,7 @@
         <a href="/location.html" class="nav-item">LOCATION</a>
       </nav>
     </div>
-    <iframe src="aim.lol" width="1920" height="1080" data-dashlane-frameid="1629"></iframe>
+    <iframe src="https://ejvd3326248pklq0mtj313irgbc2vsrb-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s035r8h4/1v1.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=544c660bc8b16c1d&libs=core&mid=172&parent=https://sites.google.com/site/unblockedgames66ez/1v1-lol#st=e%3DAIHE3cBK9D0UGibwSQF2F64MR8cb4pzmPVFPpm9x2iU1OmvV3wfrHm9F2stu5dMRRYLHGsmiZQNreywjA%252F5m1pl9Ovr49lxTSbekq%252F58DGx8Fju5Kybmy15YlmhPX4edPMPIxnzqTss%252F%26c%3Denterprise&rpctoken=-1798097197484458310" width="1920" height="1080" data-dashlane-frameid="1629"></iframe>
     title="1v1"
     </iframe>
     <center>
